# kagent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  sap-aicore-modelconfig.yaml  test-sap-aicore-integration.sh
changelog/: 01-local-build-mode-ci-skills.md  02-sap-ai-core-go-adk.md  03-python-sap-ai-core-memory-mcp-oauth.md  04-oidc-auth-per-user-access-a2a-propagation.md  05-ui-oidc-github-oauth-per-user.md  06-ui-feature-flags-filtering-branding.md  07-ui-agent-create-model-pages.md  08-inline-skills-cli-containers.md  09-ui-dependency-update.md  10-srt-network-allowlist-auto-discovery.md
contrib/: CLAUDE.md
contrib/tools/: CLAUDE.md
docker/: CLAUDE.md
docker/skills-init/: Dockerfile.local
docs/: CLAUDE.md
docs/architecture/: README.md
examples/: sap-ai-core-modelconfig.yaml
go/: CLAUDE.md  Dockerfile.claude-code.local  Dockerfile.codex.local  Dockerfile.local  go.mod  go.sum
go/adk/: CLAUDE.md
go/api/: CLAUDE.md
go/core/: CLAUDE.md
helm/: CLAUDE.md
helm/agents/: CLAUDE.md
helm/kagent/: CLAUDE.md  values.yaml
helm/kagent-crds/: CLAUDE.md
helm/tools/: CLAUDE.md
python/: CLAUDE.md  Dockerfile  Dockerfile.app  Dockerfile.claude-code-runtime  Dockerfile.codex-runtime  pyproject.toml
python/samples/sota/claude_code_agent/: agent.yaml  pyproject.toml
python/samples/sota/codex_agent/: Dockerfile  README.md  agent.yaml  pyproject.toml
python/samples/sota/codex_agent/codex_agent/: __init__.py  agent.py
scripts/: CLAUDE.md
ui/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.local  next.config.ts  package-lock.json
(+307 files in other folders)
