[project]
name = "claude-code-agent-sample"
version = "0.1.0"
description = "Claude Code Agent sample using kagent-sota-adapter"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_agent"]
