[project]
name = "codex-agent-sample"
version = "0.1.0"
description = "Codex Agent sample using kagent-sota-adapter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagent-sota-adapter",
    "kagent-adk",
    "uvicorn>=0.20.0",
]

[tool.uv.sources]
kagent-sota-adapter = { workspace = true }
kagent-adk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codex_agent"]
